# first_cmake_project

./: .README.md.swp  .gitmodules  CMakeLists.txt  README.md  bashfile.sh  foo.cpp  main.cpp
